Pinentry: Show/hide button not accessible by keyboard
Closed, ResolvedPublic

Assigned To
Authored By
ebo
Jul 23 2025, 2:25 PM

Description

The show/hide button for the password needs to be accessible via keyboard.
Otherwise it is not possible to have a screen reader repeat the password.

Details

Version
pinentry 1.3.1

Event Timeline

ebo triaged this task as Normal priority.Jul 23 2025, 2:25 PM
ebo created this task.
ikloecker mentioned this in Unknown Object (Maniphest Task).Jul 28 2025, 9:59 AM
ikloecker mentioned this in Unknown Object (Maniphest Task).Jul 28 2025, 3:19 PM
ikloecker added a parent task: Unknown Object (Maniphest Task).Jul 28 2025, 3:22 PM
ikloecker changed the task status from Open to Testing.Jul 29 2025, 9:56 AM
ikloecker moved this task from Backlog to QA on the gpd5x board.

The fix should be available in gpg4win-5.0.0-beta350.

To make it available in VSD 3.3.3 and VSD 3.4 pinentry needs to be updated to version 1.3.2 in the corresponding branches.

timegrid added a subscriber: timegrid.

Looks good to me on gpg4win-5.0.0-beta357 @ win10:


Is there a reason, why the Show/Hide button needs to have the second tab order? If not, keyboard users would be very happy not to have to press tab twice for the repeat input field.

Still needs to be tested:

  • VSD 3.3.3
  • VSD 3.4

The gold rule of tab order is that tab order follows the usual reading direction, i.e. line by line from left to right. If you press Enter after entering the password in the first input field then the focus should jump to the second input field.

works in vsd3.3.3, tested with VS-Desktop-3.3.90.8-Beta

ebo edited projects, added vsd33 (vsd-3.3.3); removed vsd33.

In the meantime pinentry has been updated also for VSD 3.4.