qt5: Make Show/Hide Password functionality accessible

* qt5/pinentrydialog.h (PinEntryDialog): Remove field mVisiActionEdit.
Add field mShowHideButton.
* qt5/pinentrydialog.cpp (PinEntryDialog::PinEntryDialog): Add
Show/Hide Password button after first password input field. Remove
Show/Hide Password action. Move Generate Password button after the
second password input field. Remove signal-slot connection of removed
Show/Hide action. Add signal-slot connection for Show/Hide button.
(PinEntryDialog::textChanged): Remove code changing visibility of
removed Show/Hide action. Remove code changing the visibility of the
Generate button.
(PinEntryDialog::generatePin): Click new Show/Hide button instead of
triggering removed Show/Hide action.
(PinEntryDialog::toggleVisibility): Update icon and tool tip of
new Show/Hide button instead of removed Show/Hide action.
--

QLineEdit's actions are not accessible with the keyboard. Use a normal
button instead to show/hide the password. Move the Generate button
after the second password input field so that both password input fields
have the same size. Keep the Show/Hide button and the Generate button
always visible instead of showing/hiding them depending on the content
of the input field.

GnuPG-bug-id: 7736